feat: refina lógica de processamento de pedidos
- Reverte Order para record mantendo Clean Architecture
- Atualiza OrderEntity e OrderMapper
- Melhora testes de integração
- Adiciona documentação detalhada no README
- Implementa validações no OrderRequestDTO
- Corrige problemas de conversão entre domínio e persistência